gccida/g2/split_all_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3225:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3225:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3246:1: error: use of undeclared identifier 'v6'
v6 = split_insn( v4); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3247:6: error: use of undeclared identifier 'v6'
if ( v6 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3249:20: error: use of undeclared identifier 'v6'
while ( *( _WORD *)v6 == 35 ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3250:1: error: use of undeclared identifier 'v6'
v6 = ( rtx)v6[1]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/recog.c:3252:6: error: use of undeclared identifier 'v6'
v4 = v6; 
     ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/split_all_insns/src/obj/recog.o] Error 1
